version/0.26/_sources/api/solver/_autosummary/settings/target_mass_flow.rst.txt
:orphan:

.. _target_mass_flow:

target_mass_flow
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.target_mass_flow.target_mass_flow
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_17>`                Specify how the boundary condition will be defined.

:ref:`value <value_13>`                             Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

============================   =======================

Parent                                         Summary

============================   =======================
:ref:`momentum <momentum>`         Help not available.

:ref:`momentum <momentum_6>`       Help not available.

:ref:`momentum <momentum_9>`       Help not available.

============================   =======================

