version/0.28/_sources/api/solver/_autosummary/settings/target_mass_flow.rst.txt
:orphan:

.. _target_mass_flow:

target_mass_flow
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.target_mass_flow
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_31>`                Specify how the boundary condition will be defined.

:ref:`value <value_17>`                             Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

==============================   ==========================================================

Parent                                                                              Summary

==============================   ==========================================================
:ref:`momentum <momentum>`           Allows to change momentum model variables or settings.

:ref:`momentum_6 <momentum_6>`       Allows to change momentum model variables or settings.

:ref:`momentum_9 <momentum_9>`       Allows to change momentum model variables or settings.

==============================   ==========================================================

